--- a/index.html
+++ b/index.html
@@ -624,9 +624,9 @@ h5 {
 .buttons_group {
     display: inline-block;
 }
-/* .pt-5 {
-    padding-top: 0rem!important;
-} */
+.card1{
+  width: 415px;
+}
 }
 
 </style>
@@ -903,7 +903,7 @@ h5 {
                   <img src="test.png" class="w-100">
                 </div>
                 <div class="col-md-7 px-3">
-                  <div class="card-block pt-5" style="width: 70%;">
+                  <div class="card-block pt-5 " style="width: 70%;">
                     <h6 class="card-subtitle mb-2 text-muted">OUR MEDICAL</h6>
                     <h4 class="card-title h2">We're setting Standards in Research what's more, Clinical Care.</h4>
                     <i class="fa fa-braille main_color mt-2" aria-hidden="true" style="font-size: 35px;"></i>
