doctor card changes

--- a/index.html
+++ b/index.html
@@ -1003,13 +1003,13 @@ h5 {
                   <div class="team-item">
                       <div class="mb-30 position-relative d-flex align-items-center">
                               <span class="socials d-inline-block">
-                                  <a href="#" class="zmdi zmdi-facebook"></a>
-                                  <a href="#" class="zmdi zmdi-twitter"></a>
-                                  <a href="#" class="zmdi zmdi-google"></a>
-                                  <a href="#" class="zmdi zmdi-instagram"></a>
+                                  <a href="#" class="fa fa-facebook"></a>
+                                  <a href="#" class="fa fa-twitter"></a>
+                                  <a href="#" class="fa fa-google"></a>
+                                  <a href="#" class="fa fa-instagram"></a>
                               </span>
                           <span class="img-holder d-inline-block">
-                                  <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="Team">
+                                  <img src="doc1.png" alt="Team">
                               </span>
                       </div>
                       <div class="team-content">
@@ -1022,13 +1022,13 @@ h5 {
                   <div class="team-item">
                       <div class="mb-30 position-relative d-flex align-items-center">
                               <span class="socials d-inline-block">
-                                  <a href="#" class="zmdi zmdi-facebook"></a>
-                                  <a href="#" class="zmdi zmdi-twitter"></a>
-                                  <a href="#" class="zmdi zmdi-google"></a>
-                                  <a href="#" class="zmdi zmdi-instagram"></a>
+                                  <a href="#" class="fa fa-facebook"></a>
+                                  <a href="#" class="fa fa-twitter"></a>
+                                  <a href="#" class="fa fa-google"></a>
+                                  <a href="#" class="fa fa-instagram"></a>
                               </span>
                           <span class="img-holder d-inline-block">
-                                  <img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="Team">
+                                  <img src="doc2.png" alt="Team">
                               </span>
                       </div>
                       <div class="team-content">
@@ -1041,13 +1041,13 @@ h5 {
                   <div class="team-item">
                       <div class="mb-30 position-relative d-flex align-items-center">
                               <span class="socials d-inline-block">
-                                  <a href="#" class="zmdi zmdi-facebook"></a>
-                                  <a href="#" class="zmdi zmdi-twitter"></a>
-                                  <a href="#" class="zmdi zmdi-google"></a>
-                                  <a href="#" class="zmdi zmdi-instagram"></a>
+                                  <a href="#" class="fa fa-facebook"></a>
+                                  <a href="#" class="fa fa-twitter"></a>
+                                  <a href="#" class="fa fa-google"></a>
+                                  <a href="#" class="fa fa-instagram"></a>
                               </span>
                           <span class="img-holder d-inline-block">
-                                  <img src="https://bootdey.com/img/Content/avatar/avatar8.png" alt="Team">
+                                  <img src="doc3.png" alt="Team">
                               </span>
                       </div>
                       <div class="team-content">
