--- a/about_us.html
+++ b/about_us.html
@@ -688,6 +688,9 @@ h5 {
                       <li class="nav-item">
                         <a class="nav-link" href="about_us.html">About us</a>
                       </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                      </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Link
