--- a/index.html
+++ b/index.html
@@ -424,6 +424,14 @@ footer{
     background-position: center;
 
 }
+.appointment_content{
+    background-image: url('slider2.png' );
+    background-color: #152647;
+    background-size: cover;
+    background-blend-mode: multiply;
+    background-position: center;
+
+}
 
   /* ===== ABOUT PAGE ===== */
   .team-item {
@@ -628,7 +636,12 @@ h5 {
   width: 415px;
 }
 }
-
+.appointment_head {
+  /* text-align:center; */
+color:#1370B5;
+margin-bottom:50px;
+text-transform:uppercase;
+}
 </style>
   </head>
   <body>
@@ -687,6 +700,9 @@ h5 {
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="about_us.html">About us</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
