--- a/appointment.html
+++ b/appointment.html
@@ -570,6 +570,14 @@ h5 {
 
 }
 
+.appointment_content{
+    background-image: url('slider2.png' );
+    background-color: #152647;
+    background-size: cover;
+    background-blend-mode: multiply;
+    background-position: center;
+
+}
 .slider_content{
   width: 70%;
     padding-left: 150px;
@@ -627,6 +635,12 @@ h5 {
 /* .pt-5 {
     padding-top: 0rem!important;
 } */
+}
+.appointment_head {
+  /* text-align:center; */
+color:#1370B5;
+margin-bottom:50px;
+text-transform:uppercase;
 }
 
 </style>
@@ -688,6 +702,9 @@ h5 {
                       <li class="nav-item">
                         <a class="nav-link" href="about_us.html">About us</a>
                       </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                      </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Link
@@ -734,7 +751,7 @@ h5 {
         <div class="row">
             <div class="col-md-6">
                 <div class="well-block">
-                    <div class="well-title">
+                    <div class="well-title appointment_head">
                         <h2>Questions? Book an Appointment</h2>
                     </div>
                     <form>
@@ -794,8 +811,8 @@ h5 {
                     <!-- form end -->
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="well-block">
+            <div class="col-md-6 appointment_content">
+                <div class="well-block text-light p-5">
                     <div class="well-title">
                         <h2>Why Appointment with Us</h2>
                     </div>
