--- a/appointment.html
+++ b/appointment.html
@@ -642,7 +642,9 @@ color:#1370B5;
 margin-bottom:50px;
 text-transform:uppercase;
 }
-
+.appointment_content_form{
+  padding-left: 50px;
+}
 </style>
   </head>
   <body>
@@ -747,10 +749,10 @@ text-transform:uppercase;
     </div>
 
     
-    <div class="container mt-5">
+    <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-md-6">
-                <div class="well-block">
+                <div class="well-block appointment_content_form">
                     <div class="well-title appointment_head">
                         <h2>Questions? Book an Appointment</h2>
                     </div>
@@ -801,9 +803,9 @@ text-transform:uppercase;
                                 </div>
                             </div>
                             <!-- Button -->
-                            <div class="col-md-12">
+                            <div class="col-md-12 mt-5">
                                 <div class="form-group">
-                                    <button id="singlebutton" name="singlebutton" class="btn btn-default">Make An Appointment</button>
+                                    <button id="btn" name="singlebutton" class="btn btn-primary">Make An Appointment</button>
                                 </div>
                             </div>
                         </div>
