--- a/index.html
+++ b/index.html
@@ -642,6 +642,9 @@ color:#1370B5;
 margin-bottom:50px;
 text-transform:uppercase;
 }
+.appointment_content_form{
+  padding-left: 50px;
+}
 </style>
   </head>
   <body>
